--- a/logstash/config.conf
+++ b/logstash/config.conf
@@ -1,7 +1,9 @@
 input {
-  syslog {
-    type => syslog
-    port => 25826
+  lumberjack {
+    port => 5000
+    type => "logs"
+    ssl_certificate => "/certs/certs/logstash-forwarder.crt"
+    ssl_key => "/certs/private/logstash-forwarder.key"
   }
 }
 
